--- a/payment.html
+++ b/payment.html
@@ -125,7 +125,8 @@ h2{font-size: 50px;
             </div>
           </div>
         </div>
-        <input type="submit" value="Continue to checkout" class="btn">
+       <a href="https://www.instamojo.com/@sethiyaparag/" rel="im-checkout" data-text="Pay" data-css-style="color:#ffffff; background:#75c26a; width:300px; border-radius:4px"   data-layout="vertical"></a>
+<script src="https://js.instamojo.com/v1/button.js"></script>
       </form>
     </div>
 </body>
