--- a/payment.html
+++ b/payment.html
@@ -126,7 +126,7 @@ h2{font-size: 50px;
             </div>
           </div>
         </div>
-        <a href="https://www.instamojo.com/@sethiyaparag" target="_blank" style="text-decoration: none;">Checkout</a>
+        <a href="https://test.instamojo.com/@sethiyaparag/" target="_blank" style="text-decoration: none;">Checkout</a>
       </form>
     </div>
 </body>
